--- a/bin/main.html
+++ b/bin/main.html
@@ -27,6 +27,6 @@
 	<script src="pixi.min.js"></script>
 </head>
 <body>
-	<script src="game.js"></script>
+	<script src="game.js?version=0"></script>
 </body>
 </html>
