- ajout de la lib CanvasInput + code wrapper pour l'utiliser : vega.ui.MyCanvasInputContainer - redéfinition possible pour l'instanciation du conteneur à la racine de l'appli - mod set params texte localisable

--- a/bin/index.html
+++ b/bin/index.html
@@ -32,6 +32,7 @@
 	<script src="howler.min.js"></script>
 	<script src="pixi.min.js"></script>
 	<script src="pixi-multistyle-text.umd.js"></script>
+	<script src="CanvasInput.min.js"></script>
 </head>
 <body>
 	<script src="game.js?version=0"></script>
